--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,23 @@
         "96": "icons/icon-96x96.png",
         "128": "icons/icon-128x128.png"
     },
+    "content_scripts": [
+        {
+            "all_frames": true,
+            "js": ["./src/content-script/index.ts"],
+            "matches": [
+                "https://*/*",
+                "http://localhost/*",
+                "http://0.0.0.0/*"
+            ],
+            "run_at": "document_start"
+        }
+    ],
+    "background": {
+        "service_worker": "./src/background/background.ts",
+        "type": "module",
+        "persistent": false
+    },
     "action": {
         "default_icon": "icons/icon-48x48.png",
         "default_popup": "index.html"
