--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nanoevents": "^8.0.0",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.14",
